@@ -3,20 +3,19 @@ e17803523406e5fe1455727bb1bccf74 COPYING
 b303a680461dbd13eb71e5584a80d9ca acct_mgr/model.py
 da9fcdcc0c092edf11ea518993830c6a acct_mgr/locale/cs/LC_MESSAGES/acct_mgr.po
 90570f384603bfe212589f29ce7b8bcc acct_mgr/md5crypt.py
-d049310650194b3821828c4094c51b06 acct_mgr/tests/functional/testenv.py
+08607700351722e41bf041a021c4f202 acct_mgr/templates/register.html
 a253fc531988f93317bb719c491f7517 acct_mgr/templates/db_cleanup.html
 3411fc75728494d150cc4e434a5b1d79 acct_mgr/tests/functional/smtpd.py
-fa358783af8c09d363b44ad7a5d55903 acct_mgr/locale/messages.pot
 32c440e3821abd6f54416fc6670cd80c acct_mgr/locale/es/LC_MESSAGES/acct_mgr.po
 d41d8cd98f00b204e9800998ecf8427e acct_mgr/__init__.py
-ec6117865681cdc119cf2d02e84366d7 acct_mgr/locale/pl/LC_MESSAGES/acct_mgr.po
-c40a05f743c0771db6f56ee24ad68c96 acct_mgr/locale/de/LC_MESSAGES/acct_mgr.po
 e73ff08eb165e3e316f9a9087a050ff8 acct_mgr/templates/account_details.html
+c40a05f743c0771db6f56ee24ad68c96 acct_mgr/locale/de/LC_MESSAGES/acct_mgr.po
+ec6117865681cdc119cf2d02e84366d7 acct_mgr/locale/pl/LC_MESSAGES/acct_mgr.po
 0e1f72d6e7b2e0a9922b6e2ddfdd7cae acct_mgr/http.py
 1ef2d05ca97716b0d1b2cc520f1ea6dc acct_mgr/locale/sv/LC_MESSAGES/acct_mgr.po
-e9627b64dc3ec575629f02d648e9831f acct_mgr/register.py
+ada161c286f781fcbc40b3b5deb68ff6 acct_mgr/register.py
 62ac60600ca08175f64450aaf28717cc acct_mgr/locale/et/LC_MESSAGES/acct_mgr.po
-dd139f33b34219fa803cc3ce25776357 acct_mgr/guard.py
+e709298ef186dad00596450f6c4cb254 acct_mgr/guard.py
 5e3aaebeb37a3f5ccf2936d9b0220d8a acct_mgr/locale/te/LC_MESSAGES/acct_mgr.po
 c2dc4a888edb9245452464358fb58696 acct_mgr/locale/id_ID/LC_MESSAGES/acct_mgr.po
 71b1992c83172c872553e11ca6a3ff57 acct_mgr/hashlib_compat.py
@@ -30,20 +29,21 @@ f923e1fca88251968f570f25813f0b8e acct_mgr/templates/admin_users.html
 b4a1327bcdd3dec8bda8be9484607699 README
 ba86b97ac7b4e5d5d820ce795806a543 acct_mgr/locale/zh_CN/LC_MESSAGES/acct_mgr.po
 3736721def8e70851383cbb1794ae035 setup.py
-7c15faa40a56b626d3800d5eb499fea3 contrib/sessionstore_convert.py
+11293d8917dd8477667cf9a64c44d9b3 contrib/fix-session_attribute-failed_logins.py
 2eb19a946c81096e427f8985d8e9b449 acct_mgr/locale/it/LC_MESSAGES/acct_mgr.po
-d832e38fbfbab419988a8a2939e0d9e3 acct_mgr/templates/reset_password.html
+7be32664b8f9016041c29d11e483ae64 acct_mgr/templates/prefs_account.html
 80d33a38a41a4c55dd6c1bdfcba0139f contrib/style.css
 35749dfdfa66dd6712455b3d497cf440 acct_mgr/tests/db.py
 01b4ae9b5297921b4ef96e7fa52dba8d README.hashes
 4f6fa961174acf9527f918f25ca8e5af setup.cfg
+d049310650194b3821828c4094c51b06 acct_mgr/tests/functional/testenv.py
+7c15faa40a56b626d3800d5eb499fea3 contrib/sessionstore_convert.py
 12c57b1ef9d49d32fc3d8d7095d7666a contrib/signatures.py
 34be4c56261303f084054de74e71795e acct_mgr/locale/fr/LC_MESSAGES/acct_mgr.po
 61d03a8c1b9dd1d5f1230fa6705e78b1 acct_mgr/tests/api.py
-0b4bca6e2ed87ab2704e122801e33968 acct_mgr/tests/register.py
-d00944789cdbc1714cd05133a2ebc308 acct_mgr/web_ui.py
-11293d8917dd8477667cf9a64c44d9b3 contrib/fix-session_attribute-failed_logins.py
-08607700351722e41bf041a021c4f202 acct_mgr/templates/register.html
+a5135e8a2c4b3210281689984de6d0e1 acct_mgr/tests/register.py
+b02f93652e4aff25549b702a956768d6 acct_mgr/web_ui.py
+fa358783af8c09d363b44ad7a5d55903 acct_mgr/locale/messages.pot
 dde87bbc565b448c37cfe7db57c46a85 acct_mgr/templates/user_table.html
 d90cbf15382e8d2f92b291cbc8d0fe8e acct_mgr/locale/zh_TW/LC_MESSAGES/acct_mgr.po
 60e347cd9ee2c14e5d40a21a192370db acct_mgr/locale/ja/LC_MESSAGES/acct_mgr.po
@@ -52,11 +52,11 @@ f341d1581830e9a1554d072356d03706 acct_mgr/templates/admin_accountsconfig.html
 d17a7ca59671a1ec79bb046fff1f5171 acct_mgr/locale/ru/LC_MESSAGES/acct_mgr.po
 0914e9c74df900c25b4b3888ce3474c8 acct_mgr/locale/nl/LC_MESSAGES/acct_mgr.po
 1fbce6790724050f30e03e78fc138fef acct_mgr/templates/user_changes_email.txt
-ea903357159d54168b04c7a6368a611f acct_mgr/api.py
+40026874db14c712869b54240239a2c6 acct_mgr/api.py
 58e0990398560d23c1dbac6b053f0e9f acct_mgr/tests/functional/tester.py
 f00e70dced211928b14681d1d818cb0d acct_mgr/notification.py
 fb9f3a7cc64c18ece788ad3bf4954bbf acct_mgr/svnserve.py
-17ed342ceead905e1253b89ee45fb5ed changelog
+14536337f6cecec7755243536b42dd7c changelog
 80f1138018294c90113e3c9b1b3187d2 acct_mgr/util.py
 894be80462f73dfaa3bddd114bf8211b acct_mgr/htdocs/locked.png
 19709cc205aafa914bbecdebdee705df acct_mgr/tests/__init__.py
@@ -65,6 +65,7 @@ fb9f3a7cc64c18ece788ad3bf4954bbf acct_mgr/svnserve.py
 bda952616f08a471f79fc846b6716005 acct_mgr/tests/htfile.py
 4d802372d48adca7430bcae4fa38b423 acct_mgr/locale/fi/LC_MESSAGES/acct_mgr.po
 6243a9cea167bd66b21c51665c6bf23f acct_mgr/locale/tr/LC_MESSAGES/acct_mgr.po
+d832e38fbfbab419988a8a2939e0d9e3 acct_mgr/templates/reset_password.html
 4dd215c87c36ca18ac50b77269649b99 README.update
 0bd248f9ffbab67bfacbb57521f2d219 acct_mgr/templates/admin_accountsnotification.html
 7e15703cfd252dffdfeea25fdff35a4e acct_mgr/templates/verify_email.html
@@ -73,5 +74,4 @@ ceb77b30cb3915bbc6a591382ecbeafe acct_mgr/tests/functional/testcases.py
 8e9d8b002817e71f75a07d7403031c50 acct_mgr/templates/login.html
 8406b7dbb731ec2871674aca5584d7ea acct_mgr/admin.py
 e69d5a9b8f476f95ce42821552223d74 acct_mgr/pwhash.py
-7be32664b8f9016041c29d11e483ae64 acct_mgr/templates/prefs_account.html
 f5dbcb0b4fde1dda7edb5964da037ec1 acct_mgr/htdocs/time-locked.png
