@@ -3,20 +3,19 @@
 bc7af73bbcf1bf52779a6da5582e93cf142bf895 acct_mgr/model.py
 0f9d0fd7aa631c4e4d6b841270fa94f26f59a1d6 acct_mgr/locale/cs/LC_MESSAGES/acct_mgr.po
 03c09042c7556c72d7e4b232a2a45c27f35c3902 acct_mgr/md5crypt.py
-fba0b528f313ff774c1ed6b2525fdde27a4325d1 acct_mgr/tests/functional/testenv.py
+0510e920b9fc980b794cc98cb23a9404f31b256e acct_mgr/templates/register.html
 51a64bb9b6e74ebab91f4986df86e7fc8a4f494a acct_mgr/templates/db_cleanup.html
 8284abe08b471066ea28b5ec04d694ebdfa768ee acct_mgr/tests/functional/smtpd.py
-d51a3fc78bfcd3f14bbfa43ee0eddd798c6adfca acct_mgr/locale/messages.pot
 5bd56df31e3f8143a6060425a10fcd0bbf9a2c47 acct_mgr/locale/es/LC_MESSAGES/acct_mgr.po
 da39a3ee5e6b4b0d3255bfef95601890afd80709 acct_mgr/__init__.py
-90ce7b63598ebd7b1b0768eab7142d81273fe3e3 acct_mgr/locale/pl/LC_MESSAGES/acct_mgr.po
-ca04d31b534774f97386220ada776de28b0a1b0b acct_mgr/locale/de/LC_MESSAGES/acct_mgr.po
 8731757c4dceafce0971f2472ef7696c91e17db6 acct_mgr/templates/account_details.html
+ca04d31b534774f97386220ada776de28b0a1b0b acct_mgr/locale/de/LC_MESSAGES/acct_mgr.po
+90ce7b63598ebd7b1b0768eab7142d81273fe3e3 acct_mgr/locale/pl/LC_MESSAGES/acct_mgr.po
 1c8100455ed1f082f1143414b0588e9191f74740 acct_mgr/http.py
 dda4380b9195a68ad13463bddf7c1e0a2e8c158f acct_mgr/locale/sv/LC_MESSAGES/acct_mgr.po
-0bbda188f028f153f8b7ae71e6d500fb23f66f1b acct_mgr/register.py
+6896392b2dd8b473d95136bdc9771a8cad19413c acct_mgr/register.py
 f14c34993658aa8ea7cf81a553972fe336ed0db8 acct_mgr/locale/et/LC_MESSAGES/acct_mgr.po
-2241c401720486e65f240e33950c35b4a01a9a76 acct_mgr/guard.py
+4150389add422872049822e517c3cf7819fa5a34 acct_mgr/guard.py
 381f8192f665863a5a5f4305d808f4b0c2a3ebef acct_mgr/locale/te/LC_MESSAGES/acct_mgr.po
 daededb8cb96a042a4a7d3dd4c8b426540705d8a acct_mgr/locale/id_ID/LC_MESSAGES/acct_mgr.po
 f6b1c5d8a13be55b554fda664556643d64ae6e13 acct_mgr/hashlib_compat.py
@@ -30,20 +29,21 @@ f0438a6ba40376c45cea84c8c88da30b86540d75 acct_mgr/templates/reset_password_email
 1bfb69f256488e53f4715856cc7047655f8d6330 README
 6c439fce7e9b048994b4ee905d95d106fca66ed0 acct_mgr/locale/zh_CN/LC_MESSAGES/acct_mgr.po
 ac0b272d8e2245d31c48e70218c675b3f117b05d setup.py
-264d930c5893f6d8d04d14b797a570ecbda1ccd9 contrib/sessionstore_convert.py
+a70a28820080b9796beb3912e497f1a04ffe1d85 contrib/fix-session_attribute-failed_logins.py
 7b1b37e1bc047dfea261fdad2300aa59b8db6785 acct_mgr/locale/it/LC_MESSAGES/acct_mgr.po
-0eed2892716fcda53c51a6924396ceb80a48ab64 acct_mgr/templates/reset_password.html
+959be704a76dfc6ff8780cca79d9cbb797871d58 acct_mgr/templates/prefs_account.html
 57a21d4e1a5675859968ab20de64c91f0aaa8b88 contrib/style.css
 202177f216c4f23d87e329197fa7df1233fbf9f1 acct_mgr/tests/db.py
 cfc406f6141694bfbd89a9895dd70d1adc9a58e6 README.hashes
 72c60d3102f50328c85f71fee35b6952a1149858 setup.cfg
+fba0b528f313ff774c1ed6b2525fdde27a4325d1 acct_mgr/tests/functional/testenv.py
+264d930c5893f6d8d04d14b797a570ecbda1ccd9 contrib/sessionstore_convert.py
 1773c0fc3cb00cb8c29248e3fa566352b486464f contrib/signatures.py
 226b47cddf7a7a78464248ddd942d563f90a86db acct_mgr/locale/fr/LC_MESSAGES/acct_mgr.po
 b7a86759c788a9b3551fa1189872232da6469567 acct_mgr/tests/api.py
-39bbd3a40a4944caf8a042f3593b3c0c28f20f4a acct_mgr/tests/register.py
-3f67e6a1a7df6d98829d2ad871e5a781f72c5cfc acct_mgr/web_ui.py
-a70a28820080b9796beb3912e497f1a04ffe1d85 contrib/fix-session_attribute-failed_logins.py
-0510e920b9fc980b794cc98cb23a9404f31b256e acct_mgr/templates/register.html
+694118250e0f0c027129c28eb5a212a748c3fc18 acct_mgr/tests/register.py
+dc0e6c5fb2187687ff42f731136073054dcb407f acct_mgr/web_ui.py
+d51a3fc78bfcd3f14bbfa43ee0eddd798c6adfca acct_mgr/locale/messages.pot
 c92511421f6969d4f0a826531b86b6c74120f5f6 acct_mgr/templates/user_table.html
 ca95dcae42354089dd1ebe9b1528090891731331 acct_mgr/locale/zh_TW/LC_MESSAGES/acct_mgr.po
 55cc7ac2bb10f9dd1084a334469571c2fab77a6b acct_mgr/locale/ja/LC_MESSAGES/acct_mgr.po
@@ -52,11 +52,11 @@ bffc48069786dfad5013c7b373f7c68b17b263ae acct_mgr/locale/uk/LC_MESSAGES/acct_mgr
 023894768173e880149323446ced58f036f76b36 acct_mgr/locale/ru/LC_MESSAGES/acct_mgr.po
 4fde4209f04861e4a94cda816acaed54f68a1f88 acct_mgr/locale/nl/LC_MESSAGES/acct_mgr.po
 ac92fd4c593bedbe1684c9e97c9fb3f9a0045a88 acct_mgr/templates/user_changes_email.txt
-e5ab8e8b998e501808ab1b54c219ea9555c3aec2 acct_mgr/api.py
+bde7546976fe4be71c0f3c3e6e7dc000585a31e7 acct_mgr/api.py
 9667b5df4b204d76aa3f59768dcc63bb0a5ee19a acct_mgr/tests/functional/tester.py
 8649d1aacc7d4991ecdf176406be5165ceb84f67 acct_mgr/notification.py
 f86b43fbe5513cd1936e9983798e35461a8f1cb2 acct_mgr/svnserve.py
-8e397275a8884e4efd39049c6a33b4b87f52d0f3 changelog
+a8222904ef5909fd4159d8ff8a96d5bfc47028b5 changelog
 177774ce0f3ec279b60a027f9ee1ec2d9aead4e6 acct_mgr/util.py
 29a8dd6869bd28db94ba45a59b8e3c10309ec4d1 acct_mgr/htdocs/locked.png
 2e974e791ef3999d09db8e8b8966e939ff9e0853 acct_mgr/tests/__init__.py
@@ -65,6 +65,7 @@ ff26f1b92b317e025632f778c80f0ec413a0d207 acct_mgr/macros.py
 59e129401c57d4063ce152f52a91c104cab07be4 acct_mgr/tests/htfile.py
 390050e75ffcdb97e0ff2d34dcf9898adcf60a4c acct_mgr/locale/fi/LC_MESSAGES/acct_mgr.po
 8542ceb85931966104308ea3dea418377c7054b4 acct_mgr/locale/tr/LC_MESSAGES/acct_mgr.po
+0eed2892716fcda53c51a6924396ceb80a48ab64 acct_mgr/templates/reset_password.html
 f4b16c034dd6ad3e837d03dc514bfe605b884b82 README.update
 eb3095d21942fceed465f1187bafe71a96b88581 acct_mgr/templates/admin_accountsnotification.html
 fd2f3e356295e3c98167e9efce745573022fbe41 acct_mgr/templates/verify_email.html
@@ -73,5 +74,4 @@ fd2f3e356295e3c98167e9efce745573022fbe41 acct_mgr/templates/verify_email.html
 6047dd09e13ad891dc6eca7b56743a22bd1f4bf3 acct_mgr/templates/login.html
 22d15eaef27769a37ca12cd7adede0d5a9724630 acct_mgr/admin.py
 baa22819956df94e45d4ec344cfd16f495906c0e acct_mgr/pwhash.py
-959be704a76dfc6ff8780cca79d9cbb797871d58 acct_mgr/templates/prefs_account.html
 106b764a92f61487f3e29479239077a5aa4e1725 acct_mgr/htdocs/time-locked.png
